# rare-event-vru-motion-forecasting

./: .gitignore  AUDIT.md  BLOCKERS.md  Dockerfile  README.md  STATUS.yaml  WORK_LOG.md  pyproject.toml
.github/workflows/: ci.yml
app/: dashboard.py
models/: gru.py  short_horizon_gru.py  tail_gru.py
outputs/: tail_dataset_classwise.csv  tail_dataset_val.csv  tail_statistics_val.csv
scripts/: analyze_scenario.py  analyze_tail_events.py  baseline_constant_acceleration.py  baseline_constant_velocity.py  count_object_types.py  create_classwise_tail_labels.py  create_tail_dataset.py  create_tail_labels.py  evaluate_beam_control.py  evaluate_gru.py  evaluate_tail_gru.py  evaluate_tail_weighted_gru.py  explore_dataset.py  plot_scenario.py  run_all.py  test_balanced_dataloader.py  test_dataloader.py  test_dataset.py  test_gru.py  test_preprocess.py  test_tail_dataset.py  test_tail_gru.py  test_vru_dataset.py  train_gru.py  train_short_horizon_gru.py  train_tail_gru.py  train_tail_gru_v2.py  train_tail_weighted_gru.py
src/: adaptive_topk.py  beam_codebook.py  dataset.py  model.py  preprocess.py  tail_dataset.py
src/rare_event_vru/: __init__.py  baselines.py  conformal.py  features.py  fixture.py  metrics.py  models.py  rarity.py  transforms.py  uncertainty.py
tests/: test_publication_core.py  test_short_horizon_gru.py
