[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rare-event-vru"
version = "0.1.0"
description = "Leakage-safe rare-event VRU forecasting research prototype"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24", "pandas>=2.0", "torch>=2.0", "pyyaml>=6", "matplotlib>=3.7", "pillow>=10", "scikit-learn>=1.3"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5", "black>=24", "mypy>=1.10", "streamlit>=1.36", "imageio>=2.34", "imageio-ffmpeg>=0.5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
